# halalho-rust

./: .dockerignore  .gitignore  Cargo.toml  podman-compose.yml
bff/: Cargo.toml  Podmanfile.dev
bff/src/: error.rs  main.rs  routes.rs  utils.rs
bff/src/config/: db.rs  r2.rs
bff/src/dtos/: auth_dto.rs  general_res_dto.rs
bff/src/handlers/: auth_handler.rs
bff/src/models/: email_verif_token.rs  refresh_token.rs  token.rs  user.rs  verif_email_token.rs
bff/src/services/: auth_service.rs  email_service.rs  email_verif_token_service.rs  jwt_service.rs  refresh_token_service.rs  storage_service.rs  token_service.rs  user_service.rs  verif_email_token_service.rs
bff/src/types/: app_state.rs  claims.rs  email.rs  error.rs  keys.rs  refresh_claims.rs  verify_email.rs
bff/src/utils/: db_util.rs
post_service/: Cargo.toml
