[package]
name = "bff"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.32.0", features = ["full"] }
mongodb = "3.3.0"
bson = { version = "2.14.0", features = ["chrono-0_4"]}
serde = "1.0.188"
serde_json = "1"
futures = "0.3.28"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
dotenvy = "0.15"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }