[package]
name = "bff"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
# utoipa = { version = "5.4.0", features = ["macros"] }
# utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id"] }
tokio = { version = "1.48.0", features = ["full"] }
mongodb = { version = "3.4.1", features = ["bson-3"] }
bson = { version = "3.1.0", features = ["chrono-0_4", "serde_with-3"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.16.0"
serde_json = "1"
futures = "0.3.28"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.9.2"
sha2 = "0.10.9"
hex = "0.4.3"
dotenvy = "0.15"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "local-time",
] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.115.0"
reqwest = { version = "0.12", features = ["json"] }
